# ichr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  LICENSES.md  PLANNING-AUDIT.md  README.md  build.rs  chat_history.json
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-project-scaffold-and-core-infrastructure/: 01-01-cargo-scaffold-SUMMARY.md
.planning/phases/04-microsoft-authentication/: 04-03-xbox-mc-services-SUMMARY.md  04-04-device-code-SUMMARY.md  04-05-chain-orchestrator-SUMMARY.md  04-06-account-store-SUMMARY.md  04-07-account-service-SUMMARY.md  04-08-launcher-integration-SUMMARY.md
.planning/phases/05-java-runtime-management/: 05-09-integration-validation-SUMMARY.md  05-VALIDATION.md
.planning/phases/06-fabric-and-quilt-modloaders/: 06-01-loader-scaffold-SUMMARY.md  06-02-domain-loader-field-SUMMARY.md  06-03-fabric-client-SUMMARY.md  06-04-quilt-client-SUMMARY.md  06-05-loader-service-SUMMARY.md  06-06-tui-state-SUMMARY.md  06-07-tui-views-SUMMARY.md  06-08-tui-wiring-SUMMARY.md  06-09-integration-validation-SUMMARY.md  06-HUMAN-UAT.md  06-VALIDATION.md
assets/forge_wrapper/: README.md
docs/: config.md  msa-setup.md
src/: error.rs  lib.rs  main.rs
src/auth/: chain.rs  device_code.rs  mc_services.rs  mod.rs  service.rs  store.rs  xbox.rs  xsts_errors.rs
src/config/: keybinds.rs  mod.rs  palette.rs
src/domain/: account.rs  instance.rs  mod.rs  platform.rs  version.rs
src/icons/: client.rs  mod.rs  service.rs
src/install/: mod.rs  natives_extract.rs  version_installer.rs
src/instance/: mod.rs  slug.rs  store.rs
src/java/: adoptium.rs  detect.rs  mapping.rs  mod.rs  mojang_jre.rs  service.rs  types.rs
src/launcher/: argfile.rs  classpath.rs  command.rs  mod.rs  offline.rs  service.rs  spawn.rs  substitute.rs
src/loader/: error.rs  fabric.rs  forge_meta.rs  forgewrapper.rs  harvest.rs  installer_subprocess.rs  maven.rs  maven_metadata.rs  mod.rs  neoforge_meta.rs  quilt.rs  service.rs  staging.rs  types.rs
src/modpack/: download.rs  error.rs  mod.rs  overrides.rs  parse.rs  service.rs
src/mods/: dep_resolve.rs  error.rs  filter.rs  installer.rs  ledger.rs  mod.rs  service.rs  types.rs
src/mods/curseforge/: api_key.rs  client.rs  error.rs  filter.rs  installer.rs  mod.rs  service.rs  types.rs  url.rs
src/mods/modrinth/: client.rs  mod.rs
src/mojang/: args.rs  cache.rs  client.rs  inherits.rs  mod.rs  natives.rs  rules.rs  types.rs
src/observability/: logging.rs  mod.rs
src/packs/: error.rs  install.rs  kind.rs  mod.rs  service.rs
src/persistence/: mod.rs  paths.rs
src/services/: instance_service.rs  mod.rs
src/tasks/: cancel.rs  job.rs  manager.rs  mod.rs
src/tui/: app.rs  mod.rs  run.rs  terminal.rs  theme.rs  view.rs
src/tui/views/: account_auth_failed.rs  accounts_list.rs  add_account_device_code.rs  cf_browser.rs  cf_file_picker_modal.rs  cf_install_failed_modal.rs  create_modal.rs  delete_confirm.rs  dep_confirm_modal.rs  download_pane.rs  installed_mods_list.rs  installed_packs_list.rs  instance_list.rs  java_picker_modal.rs  launch_failed_modal.rs  loader_install_failed_modal.rs  loader_install_progress_modal.rs  loader_picker_modal.rs  loader_switch_confirm.rs  loader_version_picker_modal.rs  mod.rs  mod_browser.rs  mod_install_failed_modal.rs  mod_version_picker_modal.rs  modpack_import_failed_modal.rs  modpack_import_path_modal.rs  modpack_import_progress_modal.rs  pack_browser.rs  pack_drop_path_modal.rs  pack_install_failed_modal.rs  uninstall_mod_confirm.rs  uninstall_pack_confirm.rs  version_picker.rs
src/util/: mod.rs  safe_zip.rs
tests/: auth_chain.rs  curseforge_client_mocked.rs  curseforge_live.rs  domain_platform.rs  forgewrapper_classes.rs  instance_domain.rs  instance_lifecycle.rs  instance_service.rs  integration_dist_metadata.rs  integration_manifest_embedded.rs  jre_live.rs  launch_command.rs  launch_integration.rs  launch_smoke.rs  loader_forge_live.rs  loader_install_translate.rs  loader_live.rs  loader_neoforge_live.rs  logging.rs  modpack_integration.rs  modpack_live.rs  modpack_parse.rs  modrinth_client_mocked.rs  modrinth_live.rs  mojang_client.rs  mojang_protocol.rs  msa_chain_live.rs  packs_integration.rs  packs_live.rs  persistence_paths.rs  safe_zip.rs  tasks_manager.rs  tui_smoke.rs  version_install.rs  version_install_integration.rs
tests/fixtures/: forge_maven_metadata.xml  neoforge_maven_metadata.xml  neoforge_meta_versions.json
tests/fixtures/java/: mojang_all_snippet.json  mojang_variant_manifest.json
tests/fixtures/modpacks/: build.rs
tests/fixtures/mojang/: version_manifest_v2_sample.json
tests/fixtures/packs/: build.rs
