[package]
name = "mineltui"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Terminal-UI Minecraft Java Edition launcher"
license = "MIT OR Apache-2.0"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Filesystem / paths
directories = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

ratatui-textarea = "0.9.1"  # Text input widget for create-instance modal (Phase 2)
time = { version = "0.3", default-features = false, features = ["std", "formatting"] }

# --- Pre-wired for later phases (lock versions now so Cargo.lock is stable) ---
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json", "gzip", "form"] }
urlencoding = "2"
md-5 = { version = "0.10", default-features = false }
sha1 = "0.10"
sha2 = "0.11"
zip = { version = "8", default-features = false, features = ["deflate", "zstd"] }
flate2 = "1.1.9"
tar = "0.4.45"

# Auth (Phase 4)
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
keyring = "3.6.3"
aes-gcm = "0.10.3"
base64 = "0.22"
dotenvy = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "test-util"] }
tempfile = "3"
filetime = "0.2"
httpmock = "0.8.3"
