[package]
name = "ichr"
version = "0.2.0"
edition = "2021"
rust-version = "1.90"
description = "Terminal-UI Minecraft Java Edition launcher"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucasldab/ichr"
homepage = "https://github.com/Lucasldab/ichr"
readme = "README.md"
authors = ["Lucas L. de Barros <lucasldabarros@gmail.com>"]
keywords = ["minecraft", "launcher", "tui", "ratatui"]
categories = ["command-line-utilities", "games"]

[dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Filesystem / paths
directories = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

ratatui-textarea = "0.9.1"  # Text input widget for create-instance modal (Phase 2)
time = { version = "0.3", default-features = false, features = ["std", "formatting"] }

# Image rendering in detail panes (Phase 13). Protocol-gated -- kitty/sixel/iterm2 get
# inline icons; halfblocks falls back to text-only (verified unusable in spike 001).
# Pulls Rust 1.90 MSRV via icy_sixel -> quantette transitive constraint.
ratatui-image = "10.0.8"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }

# --- Pre-wired for later phases (lock versions now so Cargo.lock is stable) ---
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json", "gzip", "form"] }
urlencoding = "2"
md-5 = { version = "0.10", default-features = false }
sha1 = "0.10"
sha2 = "0.11"
zip = { version = "8", default-features = false, features = ["deflate", "zstd"] }
flate2 = "1.1.9"
tar = "0.4.45"

# Auth (Phase 4)
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native", "sync-secret-service", "vendored"] }
aes-gcm = "0.10.3"
base64 = "0.22"
dotenvy = "0.15"

[build-dependencies]
# Windows side-by-side manifest embedding for PLAT-04 (longPathAware).
# No-op on non-Windows targets via the CARGO_CFG_WINDOWS guard in build.rs.
embed-manifest = "1.5"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "test-util"] }
tempfile = "3"
filetime = "0.2"
httpmock = "0.8.3"
embed-manifest = "1.5"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Whether builds should try to be cached in CI
cache-builds = true
# Whether to enable GitHub Attestations
github-attestations = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
